[package]
name = "emu6502"
version = "0.1.0"
authors = ["bytemuck <bytemuck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.5.0"
winit = "0.25.0"
rand = "0.8.4"

[[bin]]
name = "rand"
path = "bin/rand.rs"

[[bin]]
name = "load"
path = "bin/load.rs"
